# postgres-mcp

./: .env.example  Dockerfile  pyproject.toml
example-clients/: ollama_cli.py
server/: app.py  config.py
server/tools/: connection.py  schema.py
